# budget-trace

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy-demo.yml  sync-demo.yml
backend/: .gitignore  README.md  pyproject.toml
backend/src/budget_trace_backend/: __init__.py  category_palette.py  chat.py  db.py  features.py  help_text.py  main.py  mcp_server.py  models.py  seed.py
backend/src/budget_trace_backend/importers/: __init__.py  ai_parser.py  categorizer.py  common.py  csv_parser.py
backend/src/budget_trace_backend/routes/: __init__.py  categories.py  chat_sessions.py  dashboards.py  features.py  imports.py  me.py  transactions.py
backend/src/budget_trace_backend/services/: __init__.py  ai_usage.py  ai_widget_audit.py  anthropic_admin.py  anthropic_client.py  categories.py  chat_sessions.py  dashboards.py  transactions.py  widget_metrics.py
backend/src/budget_trace_backend/services/ai/: __init__.py  client.py  discovery.py  registry.py
backend/tests/: test_ai_client.py  test_categories.py  test_categorizer.py  test_dashboards.py  test_data_tools.py  test_features.py  test_importer.py  test_me.py  test_models_refresh.py  test_transactions.py
backend/tests/fixtures/: debit_credit.csv  sample.csv
backend/tests/fixtures/real/: scotia_visa_april_2026-corrupted.csv  scotia_visa_april_2026.csv
docs/: README.md  account.md  architecture.md  backend.md  conventions.md  data-model.md  frontend.md  import-qa.md  insights-ai.md  rest-api.md  running-end-to-end.md  upload.md  widgets.md
expense-visualizer-wireframe/: README.md
expense-visualizer-wireframe/project/: Expense Visualizer.html  app-utils.jsx  app.jsx  chrome.jsx  design-system.jsx  icons.jsx  login.jsx  modals.jsx  palettes.css  screens-1.jsx  screens-2.jsx
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/assets/demo/: seed.json
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: budget_category.dart  budget_cycle.dart  (+5 more)
frontend/linux/: CMakeLists.txt
frontend/test/: dash_widgets_test.dart  demo_backend_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
original-design-docs/budget-trace/: README.md
scripts/: dev-web.sh
(+80 files in other folders)
