[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-trace-backend"
version = "0.1.0"
description = "Chat orchestrator + MCP server for the Budget Trace Insights tab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "anthropic>=0.40",
  "mcp>=1.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
budget-trace-mcp = "budget_trace_backend.mcp_server:run_stdio"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
